--- a/app/views/users/edit.html.slim
+++ b/app/views/users/edit.html.slim
@@ -13,18 +13,23 @@ script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"
 					= f.label :username 
 					= f.text_field :name, class: "form-control", placeholder:"Username", required:""
 				- if @roles.present? 
-					-@roles.each do |role| 
+					-@roles.each.with_index do |role,index| 
 						/ -ru = @user.roles.collect(&:id) 
 						-ru = @user.role_users.where(role_id: role.id).last
-						-checked =@user.role_users.collect(&:role_id)
+						/ -checked =@user.role_users.collect(&:role_id)
 						.form-group
-							/ = check_box_tag "user[role_ids][]", role.id,ru.include?(role.id) ? true :false 
-							= hidden_field_tag "user[role_users_attributes][][id]",ru.try(:id)
-							= hidden_field_tag "user[role_users_attributes][][user_id]",@user.id
-							/ = hidden_field_tag "user[role_users_attributes][][role_id]",role.id
-							/ = hidden_field_tag "user[role_users_attributes][][_destroy]",@user.id
-							= check_box_tag "user[role_users_attributes][][role_id]",role.id,checked.include?(role.id) ? true :false
+							/ / = check_box_tag "user[role_ids][]", role.id,ru.include?(role.id) ? true :false 
+							/ = hidden_field_tag "user[role_users_attributes][][id]",ru.try(:id)
+							/ = hidden_field_tag "user[role_users_attributes][][user_id]",@user.id
+							/ / = hidden_field_tag "user[role_users_attributes][][role_id]",role.id
+							/ / = hidden_field_tag "user[role_users_attributes][][_destroy]",@user.id
+							/ = check_box_tag "user[role_users_attributes][][role_id]",role.id,checked.include?(role.id) ? true :false
 							/ = check_box_tag "user[role_ids][]", role.id,ru.include?(role.id) ? true :false
+							= hidden_field_tag "user[role_users_attributes][#{index}][id]",ru.try(:id)
+							= hidden_field_tag "user[role_users_attributes][#{index}][user_id]",@user.id
+							= hidden_field_tag "user[role_users_attributes][#{index}][role_id]",role.id
+							= hidden_field_tag "user[role_users_attributes][#{index}][_destroy]",true
+							= check_box_tag "user[role_users_attributes][#{index}][_destroy]",false, !ru.try(:id).blank?
 							= role.role_name			
 				= f.submit 'submit',class: "btn btn-primary"
 
